--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "http-server": "^14.1.0",
     "jest": "^27.4.7",
     "jest-puppeteer": "^6.0.3",
+    "jquery": "^3.6.0",
     "leaflet": "^1.7.1"
   },
   "devDependencies": {
